# mediatools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto-version.yml  build-vdl-desktop.yml  build-vdl-docker.yml  build-video-downloader.yml  build-video-transcoder.yml  build-vtr-desktop.yml  build-vtr-docker.yml  pages.yml
apps/video/downloader/: CHANGELOG.md  README.md  launch.py  requirements.txt  video_downloader.py
apps/video/transcoder/: CHANGELOG.md  README.md  launch.py  video_transcoder.py
docker/video-downloader/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt
docker/video-downloader/app/: __init__.py  main.py
docker/video-transcoder/: .dockerignore  .gitignore  .gitkeep  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  entrypoint.sh  requirements-dev.txt  requirements.txt
docker/video-transcoder/api/: __init__.py  config.py  main.py  models.py
docker/video-transcoder/docs/: API.md  setup.md
docker/video-transcoder/frontend/: index.html
docker/video-transcoder/k8s/: .env.example
docker/video-transcoder/scripts/: setup.sh
docker/video-transcoder/shared/: __init__.py
docker/video-transcoder/tests/: test_api.py
docker/video-transcoder/worker/: __init__.py
src/mediatools/: __init__.py
website/: CNAME  contact.html  documentation.html  downloads.html  index.html  legal.html
website/css/: downloader.css  redesign.css  static.css  styles.css
website/js/: theme.js
website/video/: downloader.html  transcoder.html
(+62 files in other folders)
