# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mediatools"
version = "0.1.0"
description = "Comprehensive media processing tools"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [{name = "MediaTools Tech"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]